inforeignland/css/style.css
body{
	background-color: #d4cec6;
	color: black;
	font-size: 15px;
}

main {
	width: 100%;
	margin: 50px auto;
	display: block;
}

header {
	margin: 70px auto 10px auto;
	width: 80%;
}


nav {
	float: right;
	margin: 0px 1.66% 0 1.66%;
}


nav li{
	display: inline-block;
	font-family: 'Roboto', sans-serif, helvetica;
	letter-spacing: .15em;
	color: black;
	font-size: .9em;
	text-transform: uppercase;
	font-weight: 400;

}

nav li a{
	text-decoration: none;
	color: black;
	padding: 10px;
	background-color: #d4cec6;
	margin-left: 20px;
}

nav li a:hover{
	color: rgba(0,0,0,.35);
}


.tagline {
    clear: both;
    padding-top: 27px;
}


.tagline p {
	text-align: center;
	margin-top: 20px;
	margin-bottom: 0px;
	font-family: 'Roboto', sans-serif, helvetica;
	letter-spacing: .15em;
	color: black;
	font-size: .8em;
	text-transform: uppercase;
	font-weight: 400;

}

.tagline p em {
	font-weight: 700;
}



section {
	width: 80%;
	margin: 0px auto 10px auto;
}



h2 {
    width: 96.5%;
    padding: 10px 0;
    margin: 70px 1.75% 10px 1.75%;
    border-top: 5px solid black;
    font-family: 'Roboto', sans-serif, helvetica;
    letter-spacing: .1em;
    font-size: 14px;
    text-transform: uppercase;
    line-height: 1.25em;
    clear: both;
    display: inline-block;
}

h2 em{
	font-weight: 700;
}

h2.top {
	margin-top: 35px;
}



p {
	font-family: 'Crimson Text', serif;
	font-size: 18px;
	line-height: 26px;
	font-weight: 400;
	color: #58514A;
	margin-bottom: 15px;
}


p a{
	font-weight: 700;
	text-decoration: none;
	color: #40362D;

}

p a:hover {
		 color: rgba(0,0,0,.35);
}



#logo {
	display: block;
	margin: 0px auto;	
	position: absolute;
    left: 43%;
}


.video_wrapper {
	margin-left: 1.66%;
	max-width: 60%;
	width: 60%;
}


.embed-container { 
	position: relative; 
	margin: 20px 1.66%;
	padding-bottom: 56.25%; 
	height: 0; 
	overflow: hidden; 
	max-width: 100%; 
} 

.embed-container iframe, 
.embed-container object, 
.embed-container embed { 
	position: absolute; 
	top: 0; 
	left: 0; 
	width: 100%; 
	height: 100%; 
}

figure {
	width: 30%;
	float: left;
	margin: 20px 1.66%;
}

figure.double {
		max-width: 59%;
		width: 59.5%;
/*		margin-left: 5%;*/
}


figure.half{
	width: 46.5%;
	float: left;
	margin: 30px 1.66%;
}

figure.full {
	width: 97%;
	margin: 30px 1.66%;
}

figure img{
	width: 100%;
	height: auto;
	transition: all .2s ease-in-out; 

}


.overlay {
	position: relative;
	float: left;
	cursor: pointer;
    margin-bottom: 8px;
}

.overlay:before {
	content: "";
	display: block;
	position: absolute;
	top: 0;
	bottom: 0;
	left: 0;
	right: 0;
	background: none;
}

.overlay:hover:before {
	content: "See more";
	text-align: center;
	padding-top: 150px;
	color: white;
	background: rgba(0, 0, 0,.45);
	-moz-transition: background .2s linear;
	-webkit-transition: background .2s linear;
	-o-transition: background .2s linear;
	transition: background .2s linear;
	font-family: 'Roboto', sans-serif, helvetica;
    letter-spacing: .075em;
    font-size: 18px;
    text-transform: uppercase;	
    font-weight: 700;
}

figcaption {
	font-family: 'Roboto', sans-serif, helvetica;
	letter-spacing: .01em;
	font-size: .9em;
	margin: 6px 0px;
	font-weight: 400;
	color: rgba(106,103,100,1);
	line-height: 1.6em;
    clear: both;
}

figcaption a{
	font-weight: 700;
	text-decoration: none;
	color: rgba(106,103,100,1);
}

figcaption a:hover{
	    color: rgba(0,0,0,.35);
}

footer {
	width: 80%;
	margin: 30px auto 10px auto;
}


footer p {
	width: 97%;
	padding: 10px 0;
	margin: 40px auto 20px auto;
	border-top: 3px solid black;
	font-family: 'Roboto', sans-serif, helvetica;
	font-size: .8em;
	line-height: 1.25em;
}


.summary {
	width: 30%;
	margin: 18px 1.66%;
}

.video_summary {
	float: right;
    margin: 15px 1.66% 0 1.66%;
}

.summary.wide {
	width: 66%;
	margin: 18px 1.66%;
	clear: both;
	 -webkit-column-count: 2; /* Chrome, Safari, Opera */
    -moz-column-count: 2; /* Firefox */
    column-count: 2;    
    -webkit-column-gap: 30px; /* Chrome, Safari, Opera */
    -moz-column-gap: 30px; /* Firefox */
    column-gap: 30px;
}


.contact_section {
	width: 30%;
	float: right;
}


.about span {
display: block;
width: 19px;
height: 3px;
margin: 4px 0;
background: rgb(0,0,0);
z-index: 99;
}


.clearfix:after {
	visibility: hidden;
	display: block;
	content: " ";
	clear: both;
	height: 0;
	font-size: 0;
}


@media only screen and (max-width: 1000px) {

.summary.wide {
	 -webkit-column-count: 1; /* Chrome, Safari, Opera */
    -moz-column-count: 1; /* Firefox */
    column-count: 1;    
}



nav li {
	float: none;
}


}


@media only screen and (max-width: 700px) {

	main {
		margin: 30px auto;
	}

	header {
		margin: 0px 2.5%;
		width: 90%;
	}

	nav li {
		display: none;
/*    width: 45%;
    margin: 25px 0%;*/
	}

	nav li a{
		display: none;
/*	padding: 10px;
	border: 1px solid rgba(0, 0, 0, 0.65);*/
	}

	nav li a:hover{
		display: none;
/*	padding: 10px;
	border: 1px solid rgba(187, 180, 173, 1);
	background-color: rgba(187, 180, 173, 0.18);*/
	}

	figure {
		float: none;
		width: 96.5%;
		margin-bottom: 50px;
	}

	figure.oped{
		width: 96.5%;
		float: none;
		margin-bottom: 50px;
	}


	figure.double {
		width: 96.5%;
		max-width: 96.5%;
		margin-bottom: 50px;	
	}


	figure.half{
		width: 96.5%;
		margin: 30px 0;
	}

	figure.full {
		width: 96.5%;
		margin: 30px 0;
	}


	h2 {
		margin: 50px auto 20px auto;
		line-height: 1.45em;
	    padding-top: 8px;
	}

	h2 em{
	display: block;
}

	section {
	margin: 0px auto 10px auto;
	width: 90%;
	}

	#logo {
	margin: 0px auto 20px auto;
	display: block;
	}


	.summary, .summary.wide {
		width: 96.5%;
		margin: 18px 0;
		float: none;

	}


	.video_wrapper {
		max-width: 100%;
		width: 100%;
	}

	.video_summary {
		float: none;
	    margin: 0px;
	}

	footer {
	    margin: 0px auto 10px auto;
	    width: 90%;

	}

	footer p {
		width: 100%;
	}


	
}

